<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_menu">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textViewTitleMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewTitleMenu" />
        Détails du menu
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewId" />

        <TextView
            android:id="@+id/textViewDisplayId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewDisplayId" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewStarter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewStarter" />

        <TextView
            android:id="@+id/textViewDsiplayStarter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewDsiplayStarter" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewMain" />

        <TextView
            android:id="@+id/textViewDisplayMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewDisplayMain" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewDessert" />

        <TextView
            android:id="@+id/textViewDisplayDessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewDisplayDessert" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonBackHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonBackHome" />

</LinearLayout>