<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_menu">
        <TextView
            android:id="@+id/textViewTitleAddMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewTitleAddMenu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewStarter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewStarter" />

        <EditText
            android:id="@+id/editTextStarter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewMain" />

        <EditText
            android:id="@+id/editTextMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewDessert" />

        <EditText
            android:id="@+id/editTextDessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonAddMenuAddMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonAddMenuAddMenu" />

    <Button
        android:id="@+id/buttonBackHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonBackHome" />

</LinearLayout>